# SpotifyThing

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  DUAL_CORE.md  README.md  get_spotify_token.py  main.c
.claude/: settings.local.json
.serena/: project.yml
SpotifyThingArduino/SpotifyThingArduino/: CLAUDE.md  platformio.ini
SpotifyThingArduino/SpotifyThingArduino/lib/ky-040/: ky-040.c  ky-040.h
SpotifyThingArduino/SpotifyThingArduino/src/: display.cpp  display.h  main.cpp  spotify.cpp  spotify.h  userControls.cpp  userControls.h  wifi_manager.cpp  wifi_manager.h
drivers/: CMakeLists.txt
drivers/display/: CMakeLists.txt  font.h  ssh1106.c  ssh1106.h
http_client/: CMakeLists.txt  example_http_client_util.h  lwipopts.h  mbedtls_config.h
lib/ky-040/: ky-040.c  ky-040.h
src/: display.cpp  display.h  main.cpp  secrets.h.example  spotify.cpp  spotify.h  userControls.cpp  wifiManager.cpp  wifi_manager.cpp
